5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4330/executions/1582_1330.log
== SUBMITION (2019-03-16 23:34:34) 
-- CODE:
round(250,6)
print(250//6)
-- EXECUTION TIME:
0.138744
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 23:34:34) 
-- CODE:
round(250,6)
print(250//6)
-- EXECUTION TIME:
0.109888
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 23:34:34) 
-- CODE:
round(250,6)
print(250//6)
-- EXECUTION TIME:
0.12985
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 23:34:35) 
-- CODE:
round(250,6)
print(250//6)
-- EXECUTION TIME:
0.118262
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 23:34:35) 
-- CODE:
round(250,6)
print(250//6)
-- EXECUTION TIME:
0.182875
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 23:38:06) 
-- CODE:
round(250,6)
print(250//6)
-- EXECUTION TIME:
0.148143
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 02:23:24) 
-- CODE:
round(250,6)
print(250//4661,)
-- EXECUTION TIME:
0.159622
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 02:23:32) 
-- CODE:
round(250,6)
print(250//41,6)
-- EXECUTION TIME:
0.151509
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
6 6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 02:23:55) 
-- CODE:
round(250,6)
print(250//41.6)
-- EXECUTION TIME:
0.2016
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
6.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 02:23:55) 
-- CODE:
round(250,6)
print(250//41.6)
-- EXECUTION TIME:
0.125593
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
6.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 02:23:56) 
-- CODE:
round(250,6)
print(250//41.6)
-- EXECUTION TIME:
0.169539
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
6.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 02:23:56) 
-- CODE:
round(250,6)
print(250//41.6)
-- EXECUTION TIME:
0.111906
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
6.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 02:23:57) 
-- CODE:
round(250,6)
print(250//41.6)
-- EXECUTION TIME:
0.158459
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
6.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 02:24:32) 
-- CODE:
round(250/6)
print(250//41.6)
-- EXECUTION TIME:
0.153985
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
6.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 02:24:33) 
-- CODE:
round(250/6)
print(250//41.6)
-- EXECUTION TIME:
0.187975
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
6.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 02:37:30) 
-- CODE:
round(41.6/6)
print(250//41.6)
-- EXECUTION TIME:
0.150642
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
6.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 02:37:30) 
-- CODE:
round(41.6/6)
print(250//41.6)
-- EXECUTION TIME:
0.07145
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1582/1330/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 02:37:31) 
-- CODE:
round(41.6/6)
print(250//41.6)
-- EXECUTION TIME:
0.138968
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
6.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 02:37:32) 
-- CODE:
round(41.6/6)
print(250//41.6)
-- EXECUTION TIME:
0.114216
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
6.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 02:39:29) 
-- CODE:
round(250/6)
print(41//6)
-- EXECUTION TIME:
0.147519
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 02:39:29) 
-- CODE:
round(250/6)
print(41//6)
-- EXECUTION TIME:
0.140433
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 02:39:30) 
-- CODE:
round(250/6)
print(41//6)
-- EXECUTION TIME:
0.162687
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 02:41:45) 
-- CODE:
round()
print(250%6)
-- EXECUTION TIME:
0.126207
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1330/main.py", line 1, in <module>
    round()
TypeError: Required argument 'number' (pos 1) not found

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 02:41:45) 
-- CODE:
round()
print(250%6)
-- EXECUTION TIME:
0.17376
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1330/main.py", line 1, in <module>
    round()
TypeError: Required argument 'number' (pos 1) not found

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 02:41:45) 
-- CODE:
round()
print(250%6)
-- EXECUTION TIME:
0.0954299
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1330/main.py", line 1, in <module>
    round()
TypeError: Required argument 'number' (pos 1) not found

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 02:45:31) 
-- CODE:
round(41,6666666667)
print(250%6)

-- EXECUTION TIME:
0.140718
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 02:45:31) 
-- CODE:
round(41,6666666667)
print(250%6)

-- EXECUTION TIME:
0.173245
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 02:45:31) 
-- CODE:
round(41,6666666667)
print(250%6)

-- EXECUTION TIME:
0.0940721
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 02:45:32) 
-- CODE:
round(41,6666666667)
print(250%6)

-- EXECUTION TIME:
0.153048
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 02:45:32) 
-- CODE:
round(41,6666666667)
print(250%6)

-- EXECUTION TIME:
0.145964
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 02:47:09) 
-- CODE:
round(250%/6)
print(41,66)

-- EXECUTION TIME:
0.153114
-- ERROR:
  File "/home/codebench/codes/1582/1330/main.py", line 1
    round(250%/6)
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 02:47:09) 
-- CODE:
round(250%/6)
print(41,66)

-- EXECUTION TIME:
0.141907
-- ERROR:
  File "/home/codebench/codes/1582/1330/main.py", line 1
    round(250%/6)
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 02:48:14) 
-- CODE:
round(250%/6)
print(41.66)

-- EXECUTION TIME:
0.115629
-- ERROR:
  File "/home/codebench/codes/1582/1330/main.py", line 1
    round(250%/6)
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 02:48:34) 
-- CODE:
round(250/6)
print(41.66)

-- EXECUTION TIME:
0.129385
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 02:48:35) 
-- CODE:
round(250/6)
print(41.66)

-- EXECUTION TIME:
0.261096
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 02:48:35) 
-- CODE:
round(250/6)
print(41.66)

-- EXECUTION TIME:
0.107513
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 02:48:35) 
-- CODE:
round(250/6)
print(41.66)

-- EXECUTION TIME:
0.152423
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 02:48:36) 
-- CODE:
round(250/6)
print(41.66)

-- EXECUTION TIME:
0.106513
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 02:48:36) 
-- CODE:
round(250/6)
print(41.66)

-- EXECUTION TIME:
0.134943
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 02:48:36) 
-- CODE:
round(250/6)
print(41.66)

-- EXECUTION TIME:
0.185254
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 02:48:36) 
-- CODE:
round(250/6)
print(41.66)

-- EXECUTION TIME:
0.111595
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 02:48:37) 
-- CODE:
round(250/6)
print(41.66)

-- EXECUTION TIME:
0.1234
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 02:48:37) 
-- CODE:
round(250/6)
print(41.66)

-- EXECUTION TIME:
0.104325
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 02:48:37) 
-- CODE:
round(250/6)
print(41.66)

-- EXECUTION TIME:
0.196155
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 02:48:37) 
-- CODE:
round(250/6)
print(41.66)

-- EXECUTION TIME:
0.111857
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 02:48:38) 
-- CODE:
round(250/6)
print(41.66)

-- EXECUTION TIME:
0.16945
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 02:48:38) 
-- CODE:
round(250/6)
print(41.66)

-- EXECUTION TIME:
0.137217
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 02:51:06) 
-- CODE:
round(250%/6)
print= round (41.66)

-- EXECUTION TIME:
0.189788
-- ERROR:
  File "/home/codebench/codes/1582/1330/main.py", line 1
    round(250%/6)
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 02:51:07) 
-- CODE:
round(250%/6)
print= round (41.66)

-- EXECUTION TIME:
0.222879
-- ERROR:
  File "/home/codebench/codes/1582/1330/main.py", line 1
    round(250%/6)
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 02:51:16) 
-- CODE:
round(250%//6)
print= round (41.66)

-- EXECUTION TIME:
0.200024
-- ERROR:
  File "/home/codebench/codes/1582/1330/main.py", line 1
    round(250%//6)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 02:51:17) 
-- CODE:
round(250%//6)
print= round (41.66)

-- EXECUTION TIME:
0.101507
-- ERROR:
  File "/home/codebench/codes/1582/1330/main.py", line 1
    round(250%//6)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 02:51:17) 
-- CODE:
round(250%//6)
print= round (41.66)

-- EXECUTION TIME:
0.110934
-- ERROR:
  File "/home/codebench/codes/1582/1330/main.py", line 1
    round(250%//6)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 02:51:27) 
-- CODE:
round(250%//6)
print(round (41.66))

-- EXECUTION TIME:
0.192329
-- ERROR:
  File "/home/codebench/codes/1582/1330/main.py", line 1
    round(250%//6)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 02:51:27) 
-- CODE:
round(250%//6)
print(round (41.66))

-- EXECUTION TIME:
0.130319
-- ERROR:
  File "/home/codebench/codes/1582/1330/main.py", line 1
    round(250%//6)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 02:51:28) 
-- CODE:
round(250%//6)
print(round (41.66))

-- EXECUTION TIME:
0.157533
-- ERROR:
  File "/home/codebench/codes/1582/1330/main.py", line 1
    round(250%//6)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:21:51) 
-- CODE:
print(round(250/6,2))
-- EXECUTION TIME:
0.18258
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-19 01:52:57) 
-- CODE:
print(round(250/6,2))
-- OUTPUT:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
